--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,12 @@ ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.13.1
 Jinja2==2.10
-MarkupSafe==1.1.1
+MarkupSafe==2.0.1
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.5
+psycopg2-binary==2.9.6
 ptyprocess==0.6.0
 pycparser==2.19
 Pygments==2.2.0
